--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.6.0",
     "@heroicons/react": "^2.2.0",
     "next": "15.3.3",
     "openai": "^5.1.1",
